# gzaprsros

./: .gitignore  Doxyfile  Fixme.txt  Install.txt  README.md  Readme.md  Todo.txt  fixes.txt  gzaprsros.docx  index.html  isvalid.bash  qtbuild.bash  rosbuild.bash  rosbuildtest.bash
InstallScripts/: install_gazebo.bash  installpkgs.bash
Worlds/: Readme.md  aprs-lab-V2.world  aprs-lab-V3.world  aprs-lab-V4.world  aprs-lab-V5.world  aprs-lab-V6.world  aprs-lab-V7.world  aprs-lab.world  gzvisionsim.world  robots.world  world_setup.bash
Worlds/Templates/: camera_template.world  fanuc_gears.world  motoman_gears.world  motoman_gears_peter.world  office_furniture_wrong.world  robots_template.world  safety_system_template.world
bin7/: agilitydemo.bash  agilityfanucdemo.bash  agilitylab.bash  agilitymotomandemo.bash
bin9/: agilitydemo.bash  agilityfanucdemo.bash  agilitylab.bash  agilitymotomandemo.bash  joint_status.bash  rosagilitycrcldemo.bash  rosagilitydemo.bash
crcl/: CRCLCommands.html  CRCLProgramInstance.html  CRCLStatus.html  index.html
crcl/apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
doc/: PluginProblems.txt  version.html
docs/: Doxyfile  MainPage.cpp  MainPage.h
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  Communication_8cpp.html  Communication_8h.html  Communication_8h_source.html  Controller_8cpp.html  Controller_8cpp__incl.map  Controller_8cpp__incl.md5  Controller_8h.html  Controller_8h__incl.map  Controller_8h__incl.md5  Controller_8h_source.html  CrclApi_8cpp.html  CrclApi_8cpp__incl.map  CrclApi_8cpp__incl.md5  CrclApi_8h.html  CrclApi_8h__incl.map  CrclApi_8h__incl.md5  CrclApi_8h_source.html  Demo_8cpp.html  Demo_8cpp__incl.map  Demo_8cpp__incl.md5  Demo_8h.html  Demo_8h__incl.map  Demo_8h__incl.md5  Demo_8h_source.html  Globals_8cpp.html  Globals_8h.html  Globals_8h_source.html  GripCommand_8pb_8cc.html  GripCommand_8pb_8h.html  GripCommand_8pb_8h_source.html  Gripper_8h.html  Gripper_8h__incl.map  Gripper_8h__incl.md5  Gripper_8h_source.html  JointTrajectory_8cpp.html  JointsComm_8pb_8cc.html  JointsComm_8pb_8h.html  (+747 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_10.js  defines_13.js  defines_3.js  (+86 more)
include/aprs_headers/: Config.h  Conversions.h  Core.h  Debug.h  Dropped Text.txt  File.h  IKinematic.h  IRcs.h  ITrajectory.h  Logger.h  LoggerMacros.h  Path.h  RCSMsgQueue.h  RCSMsgQueueThread.h  RCSThreadTemplate.h  env.h  (+6 more)
lib/: libcrcllib.so.1  libgo_kinfanuc_plugin.so.1.0.0  libgokin_fanuc_plugin.so.1.0.0  libgokin_plugin.so.1.0  libgokin_plugin.so.1.0.0  libgotraj.so.1  libgotraj.so.1.0.0  libikfast_fanuc_plugin.so.1  libikfast_fanuc_plugin.so.1.0.0  libkdl_plugin.so.1.0.0
plugins9/: .nfs0000000648f6c01a0000a3f6  .nfs0000000648f6c01c0000a3f8  .nfs0000000648f6c01e0000a3fb  libgzjointcmdplugin.so.1.0.0  libgzmodelplugin.so.1.0  libgzmodelplugin.so.1.0.0  libgzparallelgripperplugin.so.1.0.0
src/: mainpage.dox
src/aprs_headers/: CMakeLists.txt  package.xml
src/aprs_headers/include/aprs_headers/: Debug.h  File.h  IKinematic.h  LoggerMacros.h  LoggerTest.cpp  RCSMsgQueue.h  RCSMsgQueueThread.h  Testing.h  hexdump.h  logging.h  seriallinkrobot.h
src/aprs_plugins/fanuckin_plugin/: CMakeLists.txt  Notes  fanuckin_plugin.pro  package.xml
src/aprs_plugins/fanuckin_plugin/TestFanucKinSolver/: TestFanucKinSolver.pro  main.cpp  tests.txt
src/aprs_plugins/fanuckin_plugin/include/fanuckin_plugin/: fanuckin_plugin.h  rosmath.h
src/aprs_plugins/fanuckin_plugin/src/: fanuc_lrmate200id.cpp  fanuckin_plugin.cpp  gomath.c  gotypes.c
src/aprs_plugins/go_lrmate_plugin/: CMakeLists.txt  go_lrmate_plugin.pro  package.xml
src/aprs_plugins/go_lrmate_plugin/include/go_lrmate_plugin/: fanuc_lrmate200id.h
src/aprs_plugins/go_lrmate_plugin/src/: fanuc_lrmate200id.cpp
src/aprs_plugins/gokin_plugin/: CMakeLists.txt  gokin_plugin.pro  gokin_plugin.pro.user.a96aef4
src/aprs_plugins/gokin_plugin/include/gokin_plugin/: Debug.h  genserkins.h  gokin.h  inifile.h
src/aprs_plugins/gokin_plugin/src/: genserkins.c  gokin.cpp  gokin.cpp.autosave  gomath.c  gotypes.c
src/aprs_plugins/ikfast_fanuc_plugin/: CMakeLists.txt  ikfast_fanuc_plugin.pro  ikfast_fanuc_plugin.pro.user.9cd3b6d  ikfast_fanuc_plugin.pro.user.a96aef4
src/aprs_plugins/ikfast_fanuc_plugin/include/ikfast_fanuc_plugin/: ikfast_fanuc_plugin.h
src/aprs_plugins/ikfast_fanuc_plugin/src/: fanuc_lrmate200id.cpp  fanuclrmate200idkinematics.cpp  ikfast_fanuc_plugin.cpp
src/gz_custom_messages/: CMakeLists.txt  README.md  package.xml
src/gz_custom_messages/include/gz_custom_messages/: GripCommand.pb.cc  GripCommand.pb.h  JointsComm.pb.cc  JointsComm.pb.h  message.pb.cc  message.pb.h
src/gz_custom_messages/proto/: GripCommand.proto  JointsComm.proto
src/gzplugins/gzjointcmdplugin/: CMakeLists.txt  Makefile  README.md  gzjntcommandplugin.cpp  gzjntcommandplugin.h  gzjntcommandplugin_global.h  gzjointcmdplugin.pro  gzjointcmdplugin.pro.user.a8b9375  gzjointcmdplugin.pro.user.a96aef4  package.xml
src/gzplugins/gzjointcmdplugin/debug/: libgzjointcmdplugin.so.1.0.0
src/gzplugins/gzmodelplugin/: CMakeLists.txt  Makefile  Notes.txt  README.md  gzmodelplugin.cpp  gzmodelplugin.h  gzmodelplugin.pro  gzmodelplugin.pro.user.a96aef4  gzmodelplugin_global.h  package.xml
src/gzplugins/gzmodelplugin/debug/: libgzmodelplugin.so.1.0.0
src/gzplugins/gzparallelgripperplugin/: CMakeLists.txt  Makefile  gzparallelgripperplugin.cpp  gzparallelgripperplugin.h  gzparallelgripperplugin.pro
src/gzplugins/gzparallelgripperplugin/debug/: libgzparallelgripperplugin.so.1.0.0
(+459 files in other folders)
